@@ -1,8 +1,11 @@
 sourceforge (2.6-0+6+) unstable; urgency=low
 
   * [Roland] [From 2.5] Added templates to conffiles.
+  * [Roland] Added dpkg-like stuff to ask whether to replace a config file
+    before doing it.  Only for installation of /etc/apache/httpd.conf for
+    now (more will follow).
 
- -- Roland Mas <lolando@debian.org>  Thu, 14 Feb 2002 18:37:28 +0100
+ -- Roland Mas <lolando@debian.org>  Sat, 16 Feb 2002 17:35:41 +0100
 
 sourceforge (2.6-0+6) unstable; urgency=low
 
